fixed jumbotron margin top on mobile devices so text is not covered

--- a/src/style.scss
+++ b/src/style.scss
@@ -107,6 +107,10 @@
     .marginForNavbar {
         margin-top: 25%;
     }
+
+    .jumbotronMarginTop {
+        margin-top: 20%;
+    }
 }
 
 .skillIcon {
